src/objects/Completed_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Assessment_Header__c</fullName>
        <formula>Assessment__r.Assessment_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <formula>TEXT(Assessment__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Completed Assessments</relationshipLabel>
        <relationshipName>Completed_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Usage</label>
        <referenceTo>Service_Usage__c</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Completed Assessment</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Completed Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>